修改首页链接

--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
 </head>
 <body>
 	<img src="m/Desert.jpg" alt="fdf" width="400px">
+	<ul>
+		<li><a href="7/index.html">第七次作业</a></li>
+		<li></li>
+	</ul>
 </body>
 </html>
