--- a/19/index.html
+++ b/19/index.html
@@ -22,6 +22,8 @@
 
 
 <body>
+
+
     <div class="container-fluid">
         <div class="row">
             <div class="col-sm-12 site-nav">
@@ -88,7 +90,7 @@
                         <div class="col-sm-8">
                             <p></p>
                             <p>我与父亲不相见已二年余了，我最不能忘记的是他的背影。</p>
-                            <p>那年冬天，祖母死了，父亲的差使也交卸了，正是祸不单行的日子。我从北京到徐州打算跟着父亲奔丧回家。到徐州见着父亲看见满院狼藉的东西，又想起祖母，不禁簌簌地流下眼泪。父亲说：“事已如此，不必难过，好在天无绝人之路！”</p>
+                            <p>那年冬天，祖母死了，父亲的差使也交卸了，正是祸不单行的日子。我从北京到徐州打算跟着父亲奔丧回家。到徐州见着父亲看见满院狼藉的东西，又想起祖母，不禁簌簌地流下眼泪。父亲说：“事已如此，不必难过，好在天无绝人之路！”<a href="http://talk.ifeng.com/project/special/fuqinjiezhuanti/zuixin/detail_2012_06/13/15270860_0.shtml">详细>> </a></p>
                         </div>
                     </div>
                     <div class="news-meta">
@@ -105,7 +107,7 @@
                         <div class="col-sm-8">
                             <p></p>
                             <p>“多年父子成兄弟。”——这是我父亲的一句名言。</p>
-                            <p> 我十七岁初恋,暑假里,在家写情书,他在一旁瞎出主意。我们的这种关系,他人或以为怪。父亲说:“我们是多年父子成兄弟。”</p>
+                            <p> 我十七岁初恋,暑假里,在家写情书,他在一旁瞎出主意。我们的这种关系,他人或以为怪。父亲说:“我们是多年父子成兄弟。”<a target="_blank"  href="http://news.xinhuanet.com/mrdx/2015-07/24/c_134443415.htm">详细>> </a></p>
                         </div>
                     </div>
                     <div class="news-meta">
@@ -124,7 +126,7 @@
                         <div class="col-sm-8">
                             <p></p>
                             <p>内心深处，我一直相信，父亲其实早已离开了这个世界，虽然大多数文章称他生死“未明”，或者是个“谜”。而且，我也一直相信，是他自己选择的离开。</p>
-                            <p>数十年来，我也无数次在梦中见到父亲从外面回来，更是悲喜交加，而伴随的却只有醒来后枕边的泪痕？</p>
+                            <p>数十年来，我也无数次在梦中见到父亲从外面回来，更是悲喜交加，而伴随的却只有醒来后枕边的泪痕？<a target="_blank"  href="http://talk.ifeng.com/project/special/fuqinjiezhuanti/zuixin/detail_2012_06/13/15270883_0.shtml">详细>></a></p>
                         </div>
                     </div>
                     <div class="news-meta">
