--- a/19/index.html
+++ b/19/index.html
@@ -2,10 +2,8 @@
 <html lang="zh-CN">
 
 <head>
-
     <meta charset="utf-8">
-     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
     <title>感恩父爱 专题</title>
@@ -20,10 +18,7 @@
     <![endif]-->
 </head>
 
-
 <body>
-
-
     <div class="container-fluid">
         <div class="row">
             <div class="col-sm-12 site-nav">
@@ -39,11 +34,12 @@
     <div class="container">
         <div class="row abs">
             <div class="col-sm-8">
-                <p1>
-                    小时候，在你眼中，他是撑起天地的巨人阿特拉斯；待你长大一些，他已大腹便便，光环不在，叛逆的你急切地要向他的权威宣战；终有一日，他曾肩负的担子落在了你的身上，方才发觉：那个老头子过往的劝诫，并非全无道理。</p1>
-                <p1>你等着他，想着有朝一日，他能从角落的摇椅中再次站起来，把你从被窝里叫醒，一起看欧洲杯，牵你的手领你去捉鱼摸虾，轻轻松松地把你再举过头顶，骑上他厚实的肩头。这样想的时候，你很清楚，他确确实实地老了。</p1>
-                <P1>你还记得那些关于你和父亲的记忆吗？<a href="http://www.rijigu.com/topic/120617/">【我想对您说】</a></P1>
-                </p1>
+                <p>
+                    小时候，在你眼中，他是撑起天地的巨人阿特拉斯；待你长大一些，他已大腹便便，光环不在，叛逆的你急切地要向他的权威宣战；终有一日，他曾肩负的担子落在了你的身上，方才发觉：那个老头子过往的劝诫，并非全无道理。</p>
+                <p>
+                    你等着他，想着有朝一日，他能从角落的摇椅中再次站起来，把你从被窝里叫醒，一起看欧洲杯，牵你的手领你去捉鱼摸虾，轻轻松松地把你再举过头顶，骑上他厚实的肩头。这样想的时候，你很清楚，他确确实实地老了。</p>
+                <P1>你还记得那些关于你和父亲的记忆吗？<a href="http://www.rijigu.com/topic/120617/">【我想对您说】</a></P>
+                    </p>
             </div>
             <div class="col-sm-4">
                 <!-- JiaThis Button BEGIN -->
@@ -63,9 +59,9 @@
         <div class="row">
             <div class="col-sm-8">
                 <div id="slides">
-                    <img src="http://p2.so.qhimg.com/t01a0dd3de234cb2597.jpg" alt="Photo by: Missy S Link: http://p2.so.qhimg.com/t01a0dd3de234cb2597.jpg" height="368">
-                    <img src="http://p3.so.qhimg.com/t01d93de4eebafd239d.jpg" alt="Photo by: Daniel Parks Link: http://www.flickr.com/photos/parksdh/5227623068/" height="368">
-                    <img src="http://p0.so.qhimg.com/t01f76a8c6b2fa07c35.jpg" alt="Photo by: carl Max Link:http://video.sina.com.cn/p/news/c/v/2016-04-14/105965213441.html?opsubject_id=news-3269" height="368">
+                    <img src="http://news.shangdu.com/102/20120531/P_5633971_0__832044695.jpg" alt="Photo by: Missy S Link: http://p2.so.qhimg.com/t01a0dd3de234cb2597.jpg" height="368">
+                    <img src="http://www.vsread.com/iconograph/1298701130.jpg" alt="Photo by: Daniel Parks Link: http://www.flickr.com/photos/parksdh/5227623068/" height="368">
+                    <img src="http://img.taopic.com/uploads/allimg/110514/40-110514144Z452.jpg" alt="Photo by: carl Max Link:http://video.sina.com.cn/p/news/c/v/2016-04-14/105965213441.html?opsubject_id=news-3269" height="500">
                 </div>
             </div>
             <div class="col-sm-4">
@@ -86,7 +82,7 @@
                 <div class="media">
                     <h4 class="media-heading"><a href="http://talk.ifeng.com/project/special/fuqinjiezhuanti/zuixin/detail_2012_06/13/15270860_0.shtml">朱自清：我最不能忘记的是他的背影 </a></h4>
                     <div class="row">
-                        <div class="col-sm-4"><img class="media-object img-responsive" src="http://s4.sinaimg.cn/bmiddle/55df7462x7025485f41d3&690" alt="..."></div>
+                        <div class="col-sm-4"><img class="media-object img-responsive" src="http://daily.cnnb.com.cn/nbwb/res/1/20100807/72541281151813064.jpg"></div>
                         <div class="col-sm-8">
                             <p></p>
                             <p>我与父亲不相见已二年余了，我最不能忘记的是他的背影。</p>
@@ -107,7 +103,7 @@
                         <div class="col-sm-8">
                             <p></p>
                             <p>“多年父子成兄弟。”——这是我父亲的一句名言。</p>
-                            <p> 我十七岁初恋,暑假里,在家写情书,他在一旁瞎出主意。我们的这种关系,他人或以为怪。父亲说:“我们是多年父子成兄弟。”<a target="_blank"  href="http://news.xinhuanet.com/mrdx/2015-07/24/c_134443415.htm">详细>> </a></p>
+                            <p> 我十七岁初恋,暑假里,在家写情书,他在一旁瞎出主意。我们的这种关系,他人或以为怪。父亲说:“我们是多年父子成兄弟。”<a target="_blank" href="http://news.xinhuanet.com/mrdx/2015-07/24/c_134443415.htm">详细>> </a></p>
                         </div>
                     </div>
                     <div class="news-meta">
@@ -126,7 +122,7 @@
                         <div class="col-sm-8">
                             <p></p>
                             <p>内心深处，我一直相信，父亲其实早已离开了这个世界，虽然大多数文章称他生死“未明”，或者是个“谜”。而且，我也一直相信，是他自己选择的离开。</p>
-                            <p>数十年来，我也无数次在梦中见到父亲从外面回来，更是悲喜交加，而伴随的却只有醒来后枕边的泪痕？<a target="_blank"  href="http://talk.ifeng.com/project/special/fuqinjiezhuanti/zuixin/detail_2012_06/13/15270883_0.shtml">详细>></a></p>
+                            <p>数十年来，我也无数次在梦中见到父亲从外面回来，更是悲喜交加，而伴随的却只有醒来后枕边的泪痕？<a target="_blank" href="http://talk.ifeng.com/project/special/fuqinjiezhuanti/zuixin/detail_2012_06/13/15270883_0.shtml">详细>></a></p>
                         </div>
                     </div>
                     <div class="news-meta">
